src/sintaxAnalysis/SyntaxChecker.java
/* Generated By:JavaCC: Do not edit this line. SyntaxChecker.java */
package sintaxAnalysis;

import Estructuras.Nodo;
import Estructuras.Grafo;
import java.io.*;
import java.util.ArrayList;

public class SyntaxChecker implements SyntaxCheckerConstants {

        private static int sameLineDCL = 0;
        private static int mainDefinido = 0;
        private static int scope = 0;
        private static int numeroVariable = 0;
        private static int inMain = 0;
        private static Boolean addVarFalg = true;
        private static String indiceAcceso = "";
        private static Boolean inCall = false;
        private static ArrayList<String> valoresIgualdadTabla;
        private static String nombreArchivo = "D:/proyects/cuboLEDJCC/src/sintaxAnalysis/eje.txt";
        private static TablaVariables tablaVariables = new TablaVariables();
        public static ArrayList<String> constantesConfig = new ArrayList<String>();
        public static Grafo grafo = new Grafo();

    public static void main(String[] args) {
        try {
                        File file = new File(nombreArchivo);
                        BufferedReader br = new BufferedReader(new FileReader(file));
                        String st;
                        String in = "";
                        while ((st = br.readLine()) != null) {
                                in += st;
                                in += '\u005cn';
                        }
                        System.out.println(in);
            new SyntaxChecker(new java.io.StringReader(in)).INICIAR();
            System.out.println("Syntax is okay");
            tablaVariables.imprimirIDS();
            tablaVariables.checkVariables();
            /*
            Nodo aux = grafo.getInicial();
            while (aux != null){
                System.out.println("Tipo: " + aux.getTipo());
                System.out.println("Contenido: " + aux.getContenido());
                aux = aux.getNext();
            }*/
        } catch (Throwable e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
            System.out.println("Syntax check failed: " + e.getMessage());
        }
    }

        static void checkMainDefined(int llamada, Token token) throws ParseException{
                if (mainDefinido == 0){
                        if (llamada ==  1){
                                System.out.println("Main method not defined");
                                System.out.println("In line: ");
                            System.out.println(token.beginLine);
                                ParseException e = generateParseException();
                                throw e;
                        } else {
                                mainDefinido = 1;
                        }
                } else {
                        System.out.println("Main method already defined");
                        System.out.println("In line: ");
                        System.out.println(token.beginLine);
                        ParseException e = generateParseException();
                        throw e;
                }
        }

        static void checkMainDCL(Token token) throws ParseException{
                if (inMain == 1){
                        System.out.println("Illegal declaration in main method");
                        System.out.println("In line: ");
                        System.out.println(token.beginLine);
                        ParseException e = generateParseException();
                        throw e;
                }
        }

        static void agregarVariable() {
                if (addVarFalg) {
                        tablaVariables.agregarIndiceAcceso(indiceAcceso);
                }
        }

        static void checkSameLineDCL(Token token) throws ParseException{
                if (sameLineDCL != 0) {
                        System.out.println("Expected same number of expresions as ids in same line declaration");
                        System.out.println("In line: ");
                        System.out.println(token.beginLine);
                        ParseException e = generateParseException();
                        throw e;
                }
        }

  static final public void INICIAR() throws ParseException {
    Constantes();
    S();
  }

  static final public void S() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 33:
    case ID:
      Sder();
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Sder() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      Inicial();
      S();
      break;
    case 33:
      Procedure();
      S();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Exp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
      Call();
      Exp();
      break;
    case ID:
      Inicial();
      Exp();
      break;
    case 31:
      forFunction();
      Exp();
      break;
    case 30:
      ifFunction();
      Exp();
      break;
    case 34:
      Delay_Function();
      Exp();
      break;
    case 37:
      Blink_Function();
      Exp();
      break;
    default:
      jj_la1[2] = jj_gen;
      Empty();
    }
  }

  static final public void Inicial() throws ParseException {
                 Token aux;
    Identificadores();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
      jj_consume_token(12);
                                                        grafo.addNodo("DCL",".");
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INSERT:
      case DELETE:
        OperacionesListas();
        break;
      case NEG:
      case T:
      case F:
        FuncionesListas();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 9:
      aux = jj_consume_token(9);
                                                                                                                                           grafo.addNodo("DCL","="); checkMainDCL(aux);
      Igualdad();
                                                                                                                                                                                                     checkSameLineDCL(aux);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(43);
                                                                                                                                                                                                                                    grafo.addNodo("ENDLINE","");
  }

  static final public void Identificadores() throws ParseException {
                         Token id;
    id = jj_consume_token(ID);
                                                                                                tablaVariables.agregarVariable(numeroVariable,id.image,scope);
                                                                                                grafo.addNodo("DCL",id.image);
                                                                                                numeroVariable++;
    IdentificadoresAux();
  }

  static final public void IdentificadoresAux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
                                    grafo.addNodo("DCL",","); sameLineDCL += 1;
      Identificadores();
      break;
    default:
      jj_la1[5] = jj_gen;
                                                                                                      addVarFalg = true;
      Listas();
                                                                                                                                    grafo.addNodo("DCL",indiceAcceso); indiceAcceso = "";
    }
  }

  static final public void IgualdadValoresOperables() throws ParseException {
                                  Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      aux = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORES:
        jj_consume_token(OPERADORES);
                                                                         valoresIgualdadTabla.add(aux.image);
        IgualdadAux();
        break;
      case 12:
        jj_consume_token(12);
                                                                                                                                                       indiceAcceso += aux.image; indiceAcceso += ".";
        FuncionesShape();
                                                                                                                                                                                                                          valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
        break;
      default:
        jj_la1[6] = jj_gen;
                                                                                                                                                   indiceAcceso+= aux.image; addVarFalg = false;
        Listas();
                                                                                                                                                                                                            valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = ""; addVarFalg = true;
      }
      break;
    case NUM:
      aux = jj_consume_token(NUM);
                                                                       grafo.addNodo("NUM",aux.image); valoresIgualdadTabla.add("NUM");
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORES:
        aux = jj_consume_token(OPERADORES);
                                                                                                                                                              grafo.addNodo("OPER",aux.image);
        IgualdadValoresOperables();
        break;
      default:
        jj_la1[7] = jj_gen;
        Empty();
      }
      break;
    case 6:
      jj_consume_token(6);
                                                               grafo.addNodo("OPENPAR","(");
      IgualdadAux();
      jj_consume_token(7);
                                                                                                                 grafo.addNodo("CLOSEPAR",")");
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORES:
        aux = jj_consume_token(OPERADORES);
                                                                                                                                                                       grafo.addNodo("OPER",aux.image);
        IgualdadValoresOperables();
        break;
      default:
        jj_la1[8] = jj_gen;
        IgualdadValoresOperables();
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      Empty();
    }
  }

  static final public void IgualdadAux() throws ParseException {
                     Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      aux = jj_consume_token(BOOL);
                                                  grafo.addNodo("BOOL",aux.image); valoresIgualdadTabla.add("BOOL");
      break;
    case 6:
      jj_consume_token(6);
                                                                               grafo.addNodo("OPENPAR","(");
      IgualdadValoresOperables();
      jj_consume_token(7);
                                                                                                                                              grafo.addNodo("CLOSEPAR",")");
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORES:
        aux = jj_consume_token(OPERADORES);
                                                                                                                                                                                                    grafo.addNodo("OPER",aux.image);
        IgualdadValoresOperables();
        break;
      default:
        jj_la1[10] = jj_gen;
        IgualdadValoresOperables();
      }
      break;
    case 44:
      jj_consume_token(44);
                                                                               indiceAcceso+="["; addVarFalg = false;
      ValoresListas();
      jj_consume_token(45);
                                                                                                                                            indiceAcceso+="]"; valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = ""; addVarFalg = true;
      break;
    case LIST:
      jj_consume_token(LIST);
                                                                                  addVarFalg = false; valoresIgualdadTabla.add("createList");
      CrearLista();
      Listas();
                                                                                                                                                                      addVarFalg = true;
      break;
    case LENGTH:
      FuncionLen();
                                                                                        valoresIgualdadTabla.add(indiceAcceso); indiceAcceso = "";
      break;
    default:
      jj_la1[11] = jj_gen;
      IgualdadValoresOperables();
    }
  }

  static final public void Igualdad() throws ParseException {
                  Token aux;
                                 valoresIgualdadTabla = new ArrayList<String>();
    IgualdadAux();
                                                                                                                                                                                                        if (!inCall){
                                                                                                                                                                                                                tablaVariables.agregarIgualdad(numeroVariable-sameLineDCL,scope,valoresIgualdadTabla);
                                                                                                                                                                                                        } else {
                                                                                                                                                                                                                tablaVariables.agregarParamProc(valoresIgualdadTabla,scope);
                                                                                                                                                                                                        }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
                                                                      grafo.addNodo("DCL",","); sameLineDCL -= 1;
      Igualdad();
      break;
    default:
      jj_la1[12] = jj_gen;
      Empty();
    }
  }

  static final public void Listas() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 44:
      jj_consume_token(44);
                         indiceAcceso += "[";
      AccesoLista();
      jj_consume_token(45);
                                                                  indiceAcceso += "]";
      Listas();
                                                                                                  agregarVariable();
      break;
    case LIST:
      jj_consume_token(LIST);
                                                                  addVarFalg = false; valoresIgualdadTabla.add("createList");
      CrearLista();
      Listas();
      break;
    default:
      jj_la1[13] = jj_gen;
      Empty();
    }
  }

  static final public void AccesoLista() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      jj_consume_token(8);
                                                         indiceAcceso += ":,";
      Numeros();
      AccesoLista();
      break;
    case NUM:
    case LENGTH:
    case ID:
      Numeros();
      AccesoListaAux();
      break;
    default:
      jj_la1[14] = jj_gen;
      ValoresListas();
    }
  }

  static final public void AccesoListaAux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
                                 indiceAcceso+=":";
      Numeros();
      break;
    case 8:
      jj_consume_token(8);
                                                                      indiceAcceso+=",";
      Numeros();
      break;
    case NUM:
    case LENGTH:
    case ID:
      Numeros();
      break;
    default:
      jj_la1[15] = jj_gen;
      Empty();
    }
  }

  static final public void ValoresListas() throws ParseException {
                       Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      aux = jj_consume_token(BOOL);
                                                   indiceAcceso+=aux.image;
      ValoresListasAux();
      break;
    default:
      jj_la1[16] = jj_gen;
      Listas();
      ValoresListasAux();
    }
  }

  static final public void ValoresListasAux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
                                    indiceAcceso+=",";
      ValoresListas();
      break;
    default:
      jj_la1[17] = jj_gen;
      Empty();
    }
  }

  static final public void FuncionesListas() throws ParseException {
                         Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEG:
      aux = jj_consume_token(NEG);
      break;
    case T:
      aux = jj_consume_token(T);
      break;
    case F:
      aux = jj_consume_token(F);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                                                             tablaVariables.agregarIgualdad(numeroVariable,scope,aux.image);
  }

  static final public void CrearLista() throws ParseException {
                    Token aux;
    jj_consume_token(6);
    jj_consume_token(RANGO);
    jj_consume_token(6);
    RangeParam();
  }

  static final public void RangeParam() throws ParseException {
                    Token n;
    Numeros();
                                           valoresIgualdadTabla.add(indiceAcceso); indiceAcceso="";
    RangeParamVal();
  }

  static final public void RangeParamVal() throws ParseException {
    jj_consume_token(8);
    jj_consume_token(BOOL);
                                       valoresIgualdadTabla.add("BOOL");
    jj_consume_token(7);
    jj_consume_token(7);
  }

  static final public void OperacionesListas() throws ParseException {
                           Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INSERT:
      aux = jj_consume_token(INSERT);
                                                         grafo.addNodo("FUN.INSERT","insert"); addVarFalg = false; valoresIgualdadTabla = new ArrayList<String>(); valoresIgualdadTabla.add(aux.image);
      jj_consume_token(6);
      valoresInsert();
      jj_consume_token(7);
                                                                                                                                                                                                                                  tablaVariables.agregarIgualdad(numeroVariable,scope,valoresIgualdadTabla); addVarFalg = true;
      break;
    case DELETE:
      aux = jj_consume_token(DELETE);
                                                                                                  grafo.addNodo("FUN.DEL","delete"); addVarFalg = false; valoresIgualdadTabla = new ArrayList<String>(); valoresIgualdadTabla.add(aux.image);
      jj_consume_token(6);
      valoresDel();
      jj_consume_token(7);
                                                                                                                                                                                                                                                                     tablaVariables.agregarIgualdad(numeroVariable,scope,valoresIgualdadTabla); addVarFalg = true;
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void valoresInsert() throws ParseException {
